# Deeds-App-doesn-t-work--main--2-

./: .env  .gitignore  COMPLETE_SETUP_GUIDE.md  COMPLETE_WORKFLOW_TEST_RESULTS.md  COMPONENTS_FIXED.md  Deeds-App-Development-Plan-Revised.md  NEXT_STEPS_README.md  TASK_COMPLETION_SUMMARY.md  add-hash-field.js  check_hashed_password_schema.js  cleanup_overlong_data.js  create-hash-verification-table.js  dev.db  docker-compose.yml  drizzle.config.ts  find_all_overlong_strings.js  find_all_varchar50_violations.js  find_overlong_varchar50.js  find_overlong_varchar50_verbose.js  fix_anchor_id_migration.js  package-lock.json  package.json  setup-script.js  test-registration.js  test-setup.js  test_crud_operations.js
Deeds-App-doesn-t-work--main/: # Run all Playwright tests.sh  .env.example  .gitignore  APPLICATION_READY.md  Architectural_Plan.md  Architectural_Plan_Revised.md  CANVAS_SETUP_GUIDE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  COMPLETE_MULTIMODAL_IMPLEMENTATION.md  COMPLETE_NLP_IMPLEMENTATION.md  DATABASE_GUIDE.md  DUAL_DATABASE_SETUP_COMPLETE.md  ENHANCED_CRIMES_SCHEMA_COMPLETE.md  ENHANCED_DEVELOPMENT_ANALYSIS.md  ENHANCED_VSCODE_SETUP.md  ENHANCEMENT_COMPLETION_REPORT.md  FINAL_APP_README.md  FIXED_README.md  HOMEPAGE_SEARCH_ENHANCEMENT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LLM_ORCHESTRATION_SETUP_COMPLETE.md  LOCAL_AI_SETUP_GUIDE.md  MODEL_SECURITY_IMPLEMENTATION.md  MODERNIZATION_COMPLETE.md  MONOREPO_README.md  MULTI_PLATFORM_README.md  PLAYWRIGHT_TESTS_FIXED.md  README.md  Rust_Backend_Development_Plan.md  TAURI_RUST_COMMANDS.rs  UI_UX_ENHANCEMENT_COMPLETE.md  USER_MODEL_REQUIREMENTS.md  add-missing-columns.js  complete-test.js  create-test-user.sql  dev.db  docker-compose.yml  drizzle.config.ts  enhance-classification.js  (+26 more)
Deeds-App-doesn-t-work--main/backend/: .env.sqlite  Cargo.toml  Cargo_full.toml
Deeds-App-doesn-t-work--main/backend/scripts/: dev.ps1  download_model.ps1  setup_db.ps1  test_api.ps1  test_setup.ps1
Deeds-App-doesn-t-work--main/backend/src/: auth.rs  auth_simple.rs  config.rs  database.rs  llm.rs  middleware.rs  qdrant.rs  qdrant_new.rs  utils.rs
Deeds-App-doesn-t-work--main/backend/src/handlers/: auth.rs  cases.rs  evidence_enhanced.rs  mod.rs
Deeds-App-doesn-t-work--main/backend/src/models/: evidence.rs  user.rs
Deeds-App-doesn-t-work--main/core-rust-backend/: Cargo.toml  Dockerfile
Deeds-App-doesn-t-work--main/core-rust-backend/src/: api.rs  config.rs  database.rs  file_processor.rs  lib.rs  main.rs  nlp.rs  security.rs
Deeds-App-doesn-t-work--main/core-rust-backend/src/handlers/: embeddings.rs  evidence.rs  health.rs  mod.rs
Deeds-App-doesn-t-work--main/core-rust-backend/src/models/: case.rs  mod.rs
Deeds-App-doesn-t-work--main/db/: .env.example  README.md  docker-compose.yml  drizzle.config.ts
Deeds-App-doesn-t-work--main/desktop-app/: package-lock.json  package.json  setup-desktop-app.ps1
Deeds-App-doesn-t-work--main/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
Deeds-App-doesn-t-work--main/desktop-app/src-tauri/src/: commands.rs  main.rs
Deeds-App-doesn-t-work--main/drizzle/: 0000_nice_katie_power.sql  0000_plain_next_avengers.sql  0000_swift_microbe.sql  0001_add_canvas_states.sql  relations.ts  schema.ts
Deeds-App-doesn-t-work--main/markdown_files/: Interactive_Canvas_Plan.md
Deeds-App-doesn-t-work--main/mobile-app/native_bindings/: Cargo.toml
Deeds-App-doesn-t-work--main/mobile-app/native_bindings/src/: lib.rs
Deeds-App-doesn-t-work--main/python-nlp-service/: legal_nlp_service.py  main.py  multimodal_example.py  requirements-pytorch.txt  requirements-safe.txt  requirements.txt
Deeds-App-doesn-t-work--main/scripts/: 0000_dry_bloodstorm.sql  add-multimodal-evidence.sql  add-relationship-feedback.sql  add-status-to-cases.js  build.ps1  clear-users.ts  dev-desktop.ps1  dev-mobile.ps1  dev-safe-migrate.js  dev-web.ps1  fix-migrations.ts  fix_cases_id.sql  fix_identity_columns.sql  seed-admin-user.ts  seed-demo-case.ts  seed-test-user.ts  seed-user.ts  setup-dev.ps1  setup-multimodal.ps1  setup.ps1  switch-db.js  update-admin-password.ts  update-imports-to-shared-schema.js
Deeds-App-doesn-t-work--main/src/: app.d.ts  app.html
Deeds-App-doesn-t-work--main/src-tauri/: Cargo.toml
Deeds-App-doesn-t-work--main/src-tauri/src/: evidence_processor.rs  llm_commands.rs  main.rs
Deeds-App-doesn-t-work--main/static/: global.css
Deeds-App-doesn-t-work--main/tests/: basic-health.spec.ts  case-management.spec.ts  complete-e2e.spec.ts  comprehensive-test.js  simple-check.js
Deeds-App-doesn-t-work--main/web-app/: vercel.json
archive_legacy_components/: app.css
config/: qdrant-config.yaml
config/llm/: local-config.json
desktop-app/: FINAL_TESTING_COMPLETE.md  LLM_UPLOAD_TESTING_COMPLETE.md  STEP_BY_STEP_GUIDE.md  llm-upload-comprehensive-test.js  package-lock.json  package.json  simple-upload-test.cjs  simple-upload-test.js
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
desktop-app/src-tauri/llm-models/gemma-test/: config.json
desktop-app/src-tauri/llm-models/llama-test/: config.json
desktop-app/src-tauri/llm-uploads/: test-model-1.txt  test-model-2.gguf
desktop-app/src-tauri/src/: database.rs  llm.rs  main.rs
drizzle/: 0000_harsh_elektra.sql  0000_loving_silvermane.sql  0000_naive_korath.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
drizzle/pg/: 0000_confused_xorn.sql
markdown_files/: AI_ASSISTANT_SETUP_GUIDE.md  Deeds-App-Development-Plan.md  TAURI_SETUP_GUIDE.md  WardenNet_Development_Plan.md  copilot-context.md
python-masking-service/: README.md  main.py  requirements.txt  setup.py
referenceeeedontUSEweb-app/referencedONTUSEsveltekit-frontend/: .env  health-check.js  package-lock.json  package.json  playwright.config.ts  run-comprehensive-tests.js
scripts/: init-pgvector.sql
src-tauri/: Cargo-enhanced.toml  LOCAL_LLM_RUST_TAURI_README.md
src-tauri/src/: llm.rs  main-enhanced.rs
tests/cjs/: test-db-connection.cjs
tests/js/: find_long_varchar_values.js  test-hash-api.js  test-hash-verification.js
(+1024 files in other folders)
