[package]
name = "prosecutor-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "prosecutor_core"
crate-type = ["lib", "cdylib"]  # lib for Tauri, cdylib for Flutter FFI

[dependencies]
# Web framework (for HTTP API when needed)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
hyper = { version = "1.0", optional = true }

# Database - Use rusqlite for SQLite, PostgreSQL support can be added later
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true, default-features = false }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid", "serde_json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Simple auth (avoiding ring crate for Windows compatibility)
base64 = "0.22"
sha2 = "0.10"
lazy_static = "1.4"

# Environment and configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# File handling and uploads
multer = { version = "3.0", optional = true }
mime = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"

# FFI support for Flutter
flutter_rust_bridge = { version = "1.77", optional = true }

[features]
default = ["database"]
# Web server features (for Vercel functions or standalone server)
web-server = ["axum", "tower", "tower-http", "hyper", "multer"]
# Core database functionality (SQLite with rusqlite)
database = []
# PostgreSQL support (for web app) - disabled for now to avoid conflicts
# postgres = ["sqlx"]
# FFI for Flutter
flutter-ffi = ["flutter_rust_bridge"]
# AI features (can be enabled when ready)
ai-features = [
    # "dep:qdrant-client",
    # "dep:candle-core",
    # "dep:candle-transformers",
    # "dep:candle-nn",
    # "dep:fastembed",
    # "dep:hf-hub",
    # "dep:tokenizers"
]

# AI dependencies commented out due to Windows compilation issues
# Will be re-enabled once environment is properly configured
# qdrant-client = { version = "1.9", optional = true }
# candle-core = { version = "0.5.1", optional = true, features = ["mkl"] }
# candle-transformers = { version = "0.5.1", optional = true, features = ["llama", "mistral", "phi"] }
# candle-nn = { version = "0.5.1", optional = true }
# fastembed = { version = "3.1", optional = true }
# hf-hub = { version = "0.3", optional = true }
# tokenizers = { version = "0.19", optional = true }

[dev-dependencies]
tempfile = "3.8"
