[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "derive-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } # For async operations
drizzle-orm = { git = "https://github.com/drizzle-team/drizzle-orm-rs", branch = "main" } # Placeholder, will need to adjust
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] } # For PostgreSQL connection
dotenv = "0.15" # For environment variables
