[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = { version = "0.88", features = ["opencv-4"] }
image = "0.24"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
tauri = { version = "1.5", features = ["shell-open", "derive-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } # For async operations
drizzle-orm = { git = "https://github.com/drizzle-team/drizzle-orm-rs", branch = "main" } # Placeholder, will need to adjust
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] } # For PostgreSQL connection
dotenv = "0.15" # For environment variables

