[package]
name = "prosecutor-app"
version = "0.1.0"
description = "Desktop application for legal case management and analysis."
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/your-repo/prosecutor-app"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "prosecutor-desktop"
path = "src/main.rs"
