[package]
name = "prosecutor-mobile-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Our core backend library
prosecutor-core = { path = "../../core-rust-backend", features = ["flutter-ffi", "database"] }

# Flutter Rust Bridge for FFI
flutter_rust_bridge = "1.77"

# Additional dependencies for mobile
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

[build-dependencies]
flutter_rust_bridge_codegen = "1.77"
